--- a/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
@@ -254,6 +254,14 @@
                     </div>
                 </div>
             </div>
+            <div class="card-footer">
+                <div class="row">
+                    @*<hr class="customHR" />*@
+                    <div class="col-sm-12">
+                        <a asp-action="Index" asp-controller="Transfers" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
