--- a/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
@@ -61,6 +61,14 @@
                     </table>
                 </div>
             </div>
+            <div class="card-footer">
+                <div class="row">
+                    @*<hr class="customHR" />*@
+                    <div class="col-sm-12">
+                        <a asp-action="Index" asp-controller="Transfers" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -68,6 +76,7 @@
 @section Scripts{
     <script>
         $(document).ready(() => {
+            hideMenu();
             makeDataTable('#tblTransfers',"2");
         });
     </script>
